[package]
name = "hlogging"
version = "0.1.0"
edition = "2018"

[lib]
name = "hlogging"
crate-type = ["staticlib"]

[workspace]
members = [
    "crates/ffi",
    "crates/hinterface",
    "crates/logger_system",
    "crates/loggers/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi = { path = "crates/ffi", version = "0.1.0" }
hinterface = { path = "crates/hinterface", version = "0.1.0" }
logger_system = { path = "crates/logger_system", version = "0.1.0" }
stream_logger = { path = "crates/loggers/stream_logger", version = "0.1.0" }
file_logger = { path = "crates/loggers/file_logger", version = "0.1.0" }
mmap_logger = { path = "crates/loggers/mmap_logger", version = "0.1.0" }

