[package]
name = "ffi"
version = "0.1.0"
edition = "2018"

[lib]
name = "ffi"
crate-type = ["staticlib", "cdylib",  "rlib"]

[package.metadata.ios]
build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]

[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
min_sdk_version = 16
target_sdk_version = 29

[dependencies]
thiserror = "1.0.29"
logger_system = { path = "../logger_system", version = "0.1.0" }
stream_logger = { path = "../loggers/stream_logger", version = "0.1.0" }
file_logger = { path = "../loggers/file_logger", version = "0.1.0" }
hinterface = { path = "../hinterface", version = "0.1.0" }
mmap_logger = { path = "../loggers/mmap_logger", version = "0.1.0" }
uniffi = { version = "0.14.0", features = ["builtin-bindgen"] }

[build-dependencies]
uniffi_build = { version = "0.14.1", features = ["builtin-bindgen"] }

