[package]
name = "file_logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "file_logger"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.ios]
build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]

[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
min_sdk_version = 16
target_sdk_version = 29

[dependencies]
chrono = "0.4.19"
hinterface={path= "../hinterface" }